K3d/codeburstTraefik/app1/app1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    run: app1
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app1
